Consistency update: align all docs and visualizations
- Created DOMAIN_COVERAGE_MASTER_V2.md with consistent 18-domain structure
- Updated all HTML visualizations with cross-navigation links
- Fixed domain counts (18 total, 0 tested, 2 theory)
- Standardized Priority/Week/Cost of Change terminology
- Added deployment-flow.html to README
- All files now reference same roadmap and status

--- a/deployment-flow.html
+++ b/deployment-flow.html
@@ -661,6 +661,7 @@
             <a href="domain-overview.html" class="nav-btn">📊 Domain Overview</a>
             <a href="deployment-order.html" class="nav-btn">🗓️ Timeline View</a>
             <a href="LAUNCH_ROADMAP.md" class="nav-btn">🚀 Launch Roadmap</a>
+            <a href="docs/DOMAIN_COVERAGE_MASTER_V2.md" class="nav-btn secondary">📑 Master Plan</a>
         </div>
     </div>
 </body>
