--- a/deployment-order.html
+++ b/deployment-order.html
@@ -567,6 +567,8 @@
 
         <div style="text-align: center; margin-top: 40px;">
             <a href="index.html" style="color: #667eea; text-decoration: none; font-weight: 600;">← Terug naar Home</a> |
+            <a href="deployment-flow.html" style="color: #667eea; text-decoration: none; font-weight: 600;">🌊 Complete Flow</a> |
+            <a href="domain-overview.html" style="color: #667eea; text-decoration: none; font-weight: 600;">📊 Domain Overview</a> |
             <a href="LAUNCH_ROADMAP.md" style="color: #667eea; text-decoration: none; font-weight: 600;">Bekijk Volledige Roadmap →</a>
         </div>
     </div>
