--- a/domain-overview.html
+++ b/domain-overview.html
@@ -982,9 +982,10 @@
         <!-- Navigation -->
         <div class="nav-buttons">
             <a href="index.html" class="nav-btn secondary">← Terug naar Home</a>
+            <a href="deployment-flow.html" class="nav-btn">🌊 Complete Flow</a>
             <a href="deployment-order.html" class="nav-btn">🗓️ Deployment Timeline</a>
             <a href="LAUNCH_ROADMAP.md" class="nav-btn">🚀 Launch Roadmap</a>
-            <a href="docs/DOMAIN_COVERAGE_MASTER.md" class="nav-btn secondary">📊 Complete Coverage</a>
+            <a href="docs/DOMAIN_COVERAGE_MASTER_V2.md" class="nav-btn secondary">📑 Master Plan</a>
         </div>
     </div>
 
