--- a/interactive-diagram.html
+++ b/interactive-diagram.html
@@ -34,7 +34,7 @@
                 <li><a href="index.html#features">Features</a></li>
                 <li><a href="landscape.html">Landscape</a></li>
                 <li><a href="contribute.html">Contribute</a></li>
-                <li><a href="https://github.com/jjuulliiaaa/KubeCompass" target="_blank">GitHub</a></li>
+                <li><a href="https://github.com/vanhoutenbos/KubeCompass" target="_blank">GitHub</a></li>
             </ul>
         </div>
     </nav>
@@ -53,7 +53,7 @@
 
         <div class="layers">
             <div class="layer">
-                <h3> Layer 1: Continuous Deployment</h3>
+                <h3> Priority 1: Continuous Deployment</h3>
                 <p>GitOps tools voor declarative deployment workflows</p>
                 <div class="layer-tools">
                     <a href="compare/gitops.html" class="tool-item">
@@ -72,7 +72,7 @@
             </div>
 
             <div class="layer">
-                <h3> Layer 2: Secrets Management</h3>
+                <h3> Priority 2: Secrets Management</h3>
                 <p>Secure secret storage en rotation</p>
                 <div class="layer-tools">
                     <a href="compare/secrets.html" class="tool-item">
@@ -224,7 +224,7 @@
                 <div class="footer-column"><h4>KubeCompass</h4><p>Open-source beslissingshulp voor Kubernetes tooling</p></div>
                 <div class="footer-column"><h4>Vergelijkingen</h4><ul><li><a href="compare/gitops.html">GitOps</a></li><li><a href="compare/secrets.html">Secrets</a></li><li><a href="compare/ingress.html">Ingress</a></li><li><a href="compare/networking.html">Networking</a></li><li><a href="compare/monitoring.html">Monitoring</a></li></ul></div>
                 <div class="footer-column"><h4>Resources</h4><ul><li><a href="landscape.html">Landscape</a></li><li><a href="docs/DECISION_RULES.md">Decision Rules</a></li><li><a href="docs/MATRIX.md">Matrix</a></li></ul></div>
-                <div class="footer-column"><h4>Community</h4><ul><li><a href="https://github.com/jjuulliiaaa/KubeCompass">GitHub</a></li><li><a href="contribute.html">Contributing</a></li></ul></div>
+                <div class="footer-column"><h4>Community</h4><ul><li><a href="https://github.com/vanhoutenbos/KubeCompass">GitHub</a></li><li><a href="contribute.html">Contributing</a></li></ul></div>
             </div>
             <div class="footer-bottom"><p>&copy; 2026 KubeCompass. Open-source onder MIT License.</p></div>
         </div>
