--- a/tool-selector-wizard.html
+++ b/tool-selector-wizard.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="nl">
 <head>
     <meta charset="UTF-8">
@@ -28,14 +28,15 @@
 <body>
     <nav class="navbar">
         <div class="nav-container">
-            <div class="nav-logo"><a href="index.html"> KubeCompass</a></div>
+            <div class="nav-logo"><a href="index.html">🧭 KubeCompass <span style="background: rgba(102, 126, 234, 0.2); padding: 0.25rem 0.5rem; border-radius: 4px; font-size: 0.8rem;">POC</span></a></div>
             <button class="nav-toggle" id="navToggle"><span></span><span></span><span></span></button>
             <ul class="nav-menu" id="navMenu">
-                <li><a href="index.html#comparisons">Vergelijkingen</a></li>
-                <li><a href="index.html#features">Features</a></li>
+                <li><a href="tool-selector-wizard.html">🧙 Wizard</a></li>
+                <li><a href="AI_CHAT_GUIDE.md">🤖 AI Advisor</a></li>
+                <li><a href="index.html#comparisons">Comparisons</a></li>
                 <li><a href="landscape.html">Landscape</a></li>
-                <li><a href="contribute.html">Contribute</a></li>
-                <li><a href="https://github.com/jjuulliiaaa/KubeCompass" target="_blank">GitHub</a></li>
+                <li><a href="docs/INDEX.md">📖 Docs</a></li>
+                <li><a href="https://github.com/vanhoutenbos/KubeCompass" target="_blank">GitHub</a></li>
             </ul>
         </div>
     </nav>
@@ -174,7 +175,7 @@
                 <div class="footer-column"><h4>KubeCompass</h4><p>Open-source beslissingshulp voor Kubernetes tooling</p></div>
                 <div class="footer-column"><h4>Vergelijkingen</h4><ul><li><a href="compare/gitops.html">GitOps</a></li><li><a href="compare/secrets.html">Secrets</a></li><li><a href="compare/ingress.html">Ingress</a></li><li><a href="compare/networking.html">Networking</a></li><li><a href="compare/monitoring.html">Monitoring</a></li></ul></div>
                 <div class="footer-column"><h4>Resources</h4><ul><li><a href="landscape.html">Landscape</a></li><li><a href="docs/DECISION_RULES.md">Decision Rules</a></li><li><a href="docs/MATRIX.md">Matrix</a></li></ul></div>
-                <div class="footer-column"><h4>Community</h4><ul><li><a href="https://github.com/jjuulliiaaa/KubeCompass">GitHub</a></li><li><a href="contribute.html">Contributing</a></li></ul></div>
+                <div class="footer-column"><h4>Community</h4><ul><li><a href="https://github.com/vanhoutenbos/KubeCompass">GitHub</a></li><li><a href="contribute.html">Contributing</a></li></ul></div>
             </div>
             <div class="footer-bottom"><p>&copy; 2026 KubeCompass. Open-source onder MIT License.</p></div>
         </div>
