--- a/deployment-flow.html
+++ b/deployment-flow.html
@@ -305,6 +305,22 @@
             border: 2px solid #667eea;
         }
 
+        /* Navbar Styles */
+        .navbar { background: white; box-shadow: 0 2px 4px rgba(0,0,0,0.1); position: sticky; top: 0; z-index: 100; margin-bottom: 20px; border-radius: 12px; }
+        .nav-container { max-width: 1600px; margin: 0 auto; padding: 1rem 2rem; display: flex; justify-content: space-between; align-items: center; }
+        .nav-logo { font-size: 1.5rem; font-weight: 700; }
+        .nav-logo a { color: #667eea; text-decoration: none; }
+        .nav-menu { display: flex; list-style: none; gap: 2rem; align-items: center; }
+        .nav-menu a { color: #4a5568; text-decoration: none; font-weight: 500; transition: color 0.3s; }
+        .nav-menu a:hover { color: #667eea; }
+        
+        /* Footer Styles */
+        .footer { background: rgba(45, 55, 72, 0.95); color: white; padding: 2rem; margin-top: 40px; border-radius: 12px; }
+        .footer-content { max-width: 1600px; margin: 0 auto; text-align: center; }
+        .footer p { color: #cbd5e0; }
+        .footer a { color: #667eea; text-decoration: none; }
+        .footer a:hover { text-decoration: underline; }
+
         @media (max-width: 1024px) {
             .domains-row {
                 grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -323,10 +339,26 @@
             .domains-row {
                 grid-template-columns: 1fr;
             }
+            
+            .nav-menu { flex-direction: column; gap: 1rem; }
         }
     </style>
 </head>
 <body>
+    <nav class="navbar">
+        <div class="nav-container">
+            <div class="nav-logo">
+                <a href="index.html">🧭 KubeCompass</a>
+            </div>
+            <ul class="nav-menu">
+                <li><a href="tool-selector-wizard.html">Tool Selector</a></li>
+                <li><a href="landscape.html">Landscape</a></li>
+                <li><a href="index.html#about">Over</a></li>
+                <li><a href="contribute.html">Bijdragen</a></li>
+            </ul>
+        </div>
+    </nav>
+
     <div class="container">
         <h1>🚀 Complete Kubernetes Deployment Flow</h1>
         <p class="subtitle">Van cluster provisioning tot maturity enhancements - alle 18 domeinen in samenhang</p>
@@ -664,5 +696,11 @@
             <a href="docs/DOMAIN_COVERAGE_MASTER_V2.md" class="nav-btn secondary">📑 Master Plan</a>
         </div>
     </div>
+
+    <footer class="footer">
+        <div class="footer-content">
+            <p>&copy; 2026 KubeCompass | <a href="https://github.com/vanhoutenbos/KubeCompass" target="_blank">GitHub</a> | <a href="contribute.html">Bijdragen</a></p>
+        </div>
+    </footer>
 </body>
 </html>
