Update comparison pages to reflect 'Domain Guide' terminology and improve navigation consistency across the site.

--- a/compare/gitops.html
+++ b/compare/gitops.html
@@ -52,8 +52,8 @@
                 <span></span>
             </button>
             <ul class="nav-menu">
-                <li><a href="#comparison">Comparison</a></li>
-                <li><a href="#decision-wizard">Decision Wizard</a></li>
+                <li><a href="#overview">Overview</a></li>
+                <li><a href="#decision-wizard">Decision Guide</a></li>
                 <li><a href="#implementation">Implementation</a></li>
                 <li><a href="../docs/INDEX.md">All Guides</a></li>
                 <li><a href="https://github.com/vanhoutenbos/KubeCompass" class="btn-github">GitHub</a></li>
@@ -65,10 +65,10 @@
     <section class="hero hero-comparison">
         <div class="container">
             <div class="breadcrumb">
-                <a href="../index.html">Home</a> / <a href="#comparisons">Comparisons</a> / <span>GitOps</span>
+                <a href="../index.html">Home</a> / <a href="#guides">Domain Guides</a> / <span>GitOps</span>
             </div>
-            <h1>GitOps Comparison: ArgoCD vs Flux</h1>
-            <p class="hero-subtitle">Production-ready decision guide backed by real-world experience</p>
+            <h1>GitOps Domain Guide: ArgoCD vs Flux</h1>
+            <p class="hero-subtitle">Praktisch advies gebaseerd op hands-on ervaring. Ga voor X, tenzij Y.</p>
             
             <!-- Quick Stats -->
             <div class="quick-stats">
