--- a/compare/ingress.html
+++ b/compare/ingress.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Ingress Controller comparison - NGINX vs Traefik vs Istio Gateway. Production-ready decision guide with scoring and implementation examples.">
-    <title>Ingress Controller Comparison: NGINX vs Traefik vs Istio Gateway | KubeCompass</title>
+    <title>Ingress Controller Domain Guide: NGINX vs Traefik vs Istio Gateway | KubeCompass</title>
     <link rel="stylesheet" href="../styles/comparison.css">
     <link rel="stylesheet" href="../styles/global.css">
     <style>
@@ -52,8 +52,8 @@
                 <span></span>
             </button>
             <ul class="nav-menu">
-                <li><a href="#comparison">Comparison</a></li>
-                <li><a href="#decision-wizard">Decision Wizard</a></li>
+                <li><a href="#overview">Overview</a></li>
+                <li><a href="#decision-wizard">Decision Guide</a></li>
                 <li><a href="#implementation">Implementation</a></li>
                 <li><a href="../docs/INDEX.md">All Guides</a></li>
                 <li><a href="https://github.com/vanhoutenbos/KubeCompass" class="btn-github">GitHub</a></li>
@@ -65,10 +65,10 @@
     <section class="hero hero-comparison">
         <div class="container">
             <div class="breadcrumb">
-                <a href="../index.html">Home</a> / <a href="#comparisons">Comparisons</a> / <span>Ingress Controllers</span>
+                <a href="../index.html">Home</a> / <a href="#guides">Domain Guides</a> / <span>Ingress Controllers</span>
             </div>
-            <h1>Ingress Controller Comparison</h1>
-            <p class="hero-subtitle">NGINX vs Traefik vs Istio Gateway</p>
+            <h1>Ingress Controller Domain Guide</h1>
+            <p class="hero-subtitle">NGINX vs Traefik vs Istio Gateway - Ga voor X, tenzij Y</p>
             
             <!-- Quick Stats -->
             <div class="quick-stats">
