--- a/compare/monitoring.html
+++ b/compare/monitoring.html
@@ -35,11 +35,11 @@
         <div class="container">
             <nav class="breadcrumb">
                 <a href="../index.html">Home</a> / 
-                <a href="../index.html#comparisons">Vergelijkingen</a> / 
+                <a href="../index.html#guides">Domain Guides</a> / 
                 <span>Monitoring</span>
             </nav>
-            <h1>Monitoring Stack Vergelijking</h1>
-            <p class="hero-subtitle">Prometheus+Grafana vs Datadog vs New Relic: Kosten, Observability & Vendor Lock-in</p>
+            <h1>Monitoring Stack Domain Guide</h1>
+            <p class="hero-subtitle">Prometheus+Grafana vs Datadog vs New Relic - Ga voor X, tenzij Y</p>
             <div class="quick-stats">
                 <div class="stat">📖 6 min read</div>
                 <div class="stat">🗓️ Jan 2026</div>
