--- a/compare/networking.html
+++ b/compare/networking.html
@@ -35,11 +35,11 @@
         <div class="container">
             <nav class="breadcrumb">
                 <a href="../index.html">Home</a> / 
-                <a href="../index.html#comparisons">Vergelijkingen</a> / 
+                <a href="../index.html#guides">Domain Guides</a> / 
                 <span>CNI Networking</span>
             </nav>
-            <h1>CNI Networking Vergelijking</h1>
-            <p class="hero-subtitle">Cilium vs Calico vs Flannel: eBPF, Network Policies & Observability</p>
+            <h1>CNI Networking Domain Guide</h1>
+            <p class="hero-subtitle">Cilium vs Calico vs Flannel - Ga voor X, tenzij Y</p>
             <div class="quick-stats">
                 <div class="stat">📖 5 min read</div>
                 <div class="stat">🗓️ Jan 2026</div>
