--- a/index.html
+++ b/index.html
@@ -116,15 +116,15 @@
             </div>
             <div class="hero-stats">
                 <div class="hero-stat"><span class="hero-stat-number">18</span><span class="hero-stat-label">Domains Mapped</span></div>
-                <div class="hero-stat"><span class="hero-stat-number">5</span><span class="hero-stat-label">Comparisons Ready</span></div>
+                <div class="hero-stat"><span class="hero-stat-number">5</span><span class="hero-stat-label">Guides Ready</span></div>
                 <div class="hero-stat"><span class="hero-stat-number">POC</span><span class="hero-stat-label">Research Phase</span></div>
             </div>
         </div>
     </section>
     <section id="comparisons" class="comparisons-section">
         <div class="container">
-            <h2 style="text-align: center; font-size: 2.5rem; margin-bottom: 1rem;">🔍 Tool Comparisons</h2>
-            <p style="text-align: center; color: #718096; font-size: 1.2rem; max-width: 700px; margin: 0 auto 3rem;">Hands-on tested tools with "Choose X unless Y" decision rules.</p>
+            <h2 style="text-align: center; font-size: 2.5rem; margin-bottom: 1rem;">🧭 Domain Guides</h2>
+            <p style="text-align: center; color: #718096; font-size: 1.2rem; max-width: 700px; margin: 0 auto 3rem;">In-depth domain analysis met praktisch tool advies. "Ga voor X, tenzij Y".</p>
             
             <div class="comparisons-grid">
                 <a href="compare/gitops.html" class="comparison-card">
